2005-02-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-DPSImage::::::::): Handle missing
	parameters, row end padding and destroy the temporary image at the
	very end.

2006-02-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServer.m (_initXContext): Don't set the environment
	value for NSHOST. Patch by Tim MacIntosh <tmcintos@avalon.net>. 
	See mails on dev mailing list for more explaination.

2006-02-06  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/xdnd.h: Declare two more functions used in xpbs.m.
	* Tools/gpbs.m: Removed compiler warnings about mismatching declarations.

2006-01-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontInfo.m (_cairo_extents_for_NSGlyph,
	-drawGlyphs:length:on:) Corrected the conversion from NSGlyph to UTF8.
	* Source/cairo/CairoFontEnumerator.m:
	Use the same default fonts as the art backend.
	
2006-01-23  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoFaceInfo.h,
	* Source/cairo/CairoFaceInfo.m,
	* Source/cairo/CairoFontEnumerator.m,
	* Source/cairo/CairoFontInfo.m:
	Rewrite of all cairo font handling to work with exported cairo
	functions and enumerate fonts with the font config library.

2006-01-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/gsc/GSContext.m:
	* Source/x11/XGServer.m:
	* Source/x11/XGServerWindow.m:
	* Source/x11/XWindowBuffer.m:
	* Headers/x11/XGServerWindow.h:
	Some fixes for 64bit processor support.  In particular, allow for
	bug/feature of X that 32bit data supplied in XChangeProperty must
	actually be 64bit on a 64bit machine.  The X client library discards
	the upper 32bits of each value when encoding the data to be sent to
	the server.  These changes fix WindowMaker interaction on AMD64.

2006-01-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m: Attempt to terminate gracefully when
	a quit message is received.

2005-12-22  Adam Fedor  <fedor@gnu.org>

	* Version 0.10.2

	* Source/art/ARTContext (-beep): Removed, unused.